--- a/app_week6/templates/app_week6/thesis_detail.html
+++ b/app_week6/templates/app_week6/thesis_detail.html
@@ -2,11 +2,38 @@
 {% block content %}
 <div class="container mx-auto p-4 flex flex-col items-center justify-center">
     <h1 class="text-4xl font-bold text-gray-700 mb-6">{{ thesis.title }}</h1>
+    <div class="flex flex-row items-start justify-start w-1/2 mb-6 space-x-6">
+        
+        <div class="flex flex-col items-start justify-start border border-gray-400 rounded-md p-4">
+            <h2 class="text-2xl font-bold text-gray-700">Details</h2>
+            <p class="text-gray-600">Students: {{ thesis.students.count }}</p>
+            <p class="text-gray-600">Is Approved: {{ thesis.is_approved }}</p>
+            <p class="text-gray-600">Supervisor: {{ thesis.supervisor }}</p>
+        </div>
+
+        <div class="flex flex-col items-start justify-start border border-gray-400 rounded-md p-4">
+            <p class="text-gray-600">Interested students:</p>
+            <ul>
+                {% for student in thesis.interested.all %}
+                    <li>{{ student.username }}</li>
+                    <li>
+                        {% if not student in thesis.students.all %}
+                            <a href="{% url 'approve_student' thesis.id student.id %}" class="text-blue-600 hover:text-blue-800">Approve</a>
+                        {% endif %}
+                    </li>
+                    
+                {% endfor %}
+            </ul>
+            
+        </div>
+    </div>
     <div class="flex flex-col items-center justify-center w-1/2 mb-6">
         <div class="flex flex-col items-center justify-center border border-gray-400 rounded-md p-4">
             <h2 class="text-2xl font-bold text-gray-700">Overview</h2>
             <p class="text-gray-600">{{ thesis.description|safe }}</p>
         </div>
+
+
      
         <div class="flex flex-col items-center justify-center border border-gray-400 rounded-md p-4 mt-6">
             <h2 class="text-2xl font-bold text-gray-700">Attachments</h2>
