--- a/app_week6/templates/app_week6/view_theses.html
+++ b/app_week6/templates/app_week6/view_theses.html
@@ -8,6 +8,14 @@
             <h3 class="text-2xl font-bold text-gray-700">{{ thesis.title }}</h3>
             <p class="text-gray-600">{{ thesis.description|truncatechars:50 }}</p>
             <a href="{% url 'view_theses' thesis.id %}" class="text-blue-600 hover:text-blue-800 px-4 py-2 rounded-full bg-gray-200 w-max cursor-pointer">View Detail</a>
+
+            {% if user.user_type == 1 or user.user_type == 4 %}
+            <a href="{% url 'request_to_join' thesis.id %}" class="text-blue-600 hover:text-blue-800 px-4 py-2 rounded-full bg-gray-200 w-max cursor-pointer">Request to join</a>
+            {% endif %}
+        
+        
+            
+            
             
         </li>
         {% endfor %}
