--- a/app_week6/templates/app_week6/alert.html
+++ b/app_week6/templates/app_week6/alert.html
@@ -1,9 +1,10 @@
 {% if messages %}
-  <div class="container mx-auto p-4 flex flex-wrap -mx-3">
+  
     {% for message in messages %}
-      <div class="w-full px-3 {% if message.tags %}{{ message.tags }}-bg {% endif %} {% if message.tags %}{{ message.tags }}-text {% endif %} text-sm py-3 rounded mx-auto flex justify-center items-center">
+      <div class="w-full px-3 {% if message.tags == 'success' %}bg-green-500 {% else %}bg-red-500{% endif %} {% if message.tags == 'success' %}text-white {% else %}text-white{% endif %} text-sm py-3 rounded mx-auto  justify-center items-center">
         <div class="text-center text-lg font-bold">{{ message }}</div>
       </div>
     {% endfor %}
-  </div>
+
 {% endif %}
+
