--- a/app_week6/templates/app_week6/thesis_detail.html
+++ b/app_week6/templates/app_week6/thesis_detail.html
@@ -10,7 +10,9 @@
             <p class="text-gray-600">Is Approved: {{ thesis.is_approved }}</p>
             <p class="text-gray-600">Supervisor: {{ thesis.supervisor }}</p>
         </div>
-
+        {% if user.user_type != 4 %}
+            
+            
         <div class="flex flex-col items-start justify-start border border-gray-400 rounded-md p-4">
             <p class="text-gray-600">Interested students:</p>
             <ul>
@@ -26,6 +28,7 @@
             </ul>
             
         </div>
+        {% endif %}
     </div>
     <div class="flex flex-col items-center justify-center w-1/2 mb-6">
         <div class="flex flex-col items-center justify-center border border-gray-400 rounded-md p-4">
