--- a/app_week6/templates/app_week6/edit_thesis.html
+++ b/app_week6/templates/app_week6/edit_thesis.html
@@ -7,13 +7,13 @@
             <label for="{{ form.title.id_for_label }}" class="block text-sm font-medium text-gray-700">
                 {{ form.title.label }}
             </label>
-            <input type="text" id="{{ form.title.id_for_label }}" name="{{ form.title.name }}" value="{{ form.title.value|default_if_none:'' }}" class="block w-full px-4 py-2 mt-2 text-base text-gray-700 placeholder-gray-400 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500" />
+            <input readonly type="text" id="{{ form.title.id_for_label }}" name="{{ form.title.name }}" value="{{ form.title.value|default_if_none:'' }}" class="block w-full px-4 py-2 mt-2 text-base text-gray-700 placeholder-gray-400 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500" />
         </div>
         <div class="mt-4">
             <label for="{{ form.description.id_for_label }}" class="block text-sm font-medium text-gray-700">
                 {{ form.description.label }}
             </label>
-            <textarea id="{{ form.description.id_for_label }}" name="{{ form.description.name }}" class="block w-full px-4 py-2 mt-2 text-base text-gray-700 placeholder-gray-400 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500" rows="3">{{ form.description.value|default_if_none:'' }}</textarea>
+            <textarea rows="25" cols="90" id="{{ form.description.id_for_label }}" name="{{ form.description.name }}" class="block w-full px-4 py-2 mt-2 text-base text-gray-700 placeholder-gray-400 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500" rows="3">{{ form.description.value|default_if_none:'' }}</textarea>
         </div>
         <div class="mt-4">
             <label for="{{ form.image.id_for_label }}" class="block text-sm font-medium text-gray-700">
