--- a/app_week6/templates/app_week6/register.html
+++ b/app_week6/templates/app_week6/register.html
@@ -29,13 +29,49 @@
                     {% endif %}
                 </div>
 				
+
+                <!-- 
+					To allow anyone to create any user type account
+
+
+					
+
+                -->
+
+
                 <div>
-                    <label for="{{ form.password2.id_for_label }}" class="block text-sm font-medium text-gray-700">{{ form.password2.label }}</label>
+                    <label for="{{ form.password2.id_for_label }}" class="block text-sm font-medium text-gray-700">{{ form.user_types.label }}</label>
                     {{ form.user_type }}
                     {% if form.user_type.errors %}
                         <p class="text-red-500 text-xs italic">{{ form.user_type.errors }}</p>
                     {% endif %}
                 </div>
+
+				<!-- 
+					To allow new users to create only student account
+                -->
+				<!-- 
+					<div class="mt-4">
+					<label for="{{ form.user_type.id_for_label }}" class="block text-sm font-medium text-gray-700">
+						{{ form.user_type.label }}
+					</label>
+					<select id="{{ form.user_type.id_for_label }}" name="{{ form.user_type.name }}" class="block w-full px-4 py-2 mt-2 text-base text-gray-700 bg-white border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500">
+						{% for value, label in form.user_type.field.choices %}
+							{% if value == 4 %}
+								<option value="{{ value }}" {% if value == form.user_type.value %}selected{% endif %}>{{ label }}</option>
+							{% endif %}
+						{% endfor %}
+					</select>
+					{% if form.user_type.errors %}
+						<p class="text-red-500 text-xs italic">{{ form.user_type.errors }}</p>
+					{% endif %}
+				</div>
+			-->
+
+
+
+
+
             </div>
             <div class="mt-6 flex justify-center">
                 <input type="submit" value="Register" class="w-full py-2 px-4 bg-blue-600 text-white font-semibold rounded-lg hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 cursor-pointer" />
