--- a/app_week6/templates/app_week6/thesis_detail.html
+++ b/app_week6/templates/app_week6/thesis_detail.html
@@ -40,6 +40,49 @@
         <div class="flex flex-col items-center justify-center border border-gray-400 rounded-md p-4">
             <h2 class="text-2xl font-bold text-gray-700">Overview</h2>
             <p class="text-gray-600">{{ thesis.description|safe }}</p>
+            <table class="min-w-full divide-y divide-gray-200">
+                <thead class="bg-gray-50">
+                    <tr>
+                        <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Field</th>
+                        <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Value</th>
+                    </tr>
+                </thead>
+                <tbody class="bg-white divide-y divide-gray-200">
+                    <tr>
+                        <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-700">Software Engineering</td>
+                        <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-600">{{ thesis.software_engineering }}</td>
+                    </tr>
+                    <tr>
+                        <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-700">Information Systems and Data Science</td>
+                        <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-600">{{ thesis.Information_Systems_and_Data_Science }}</td>
+                    </tr>
+                    <tr>
+                        <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-700">Mechanical Engineering</td>
+                        <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-600">{{ thesis.Mechanical_Engineering }}</td>
+                    </tr>
+                    <tr>
+                        <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-700">Civil and Structural Engineering</td>
+                        <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-600">{{ thesis.Civil_and_Structural_Engineering }}</td>
+                    </tr>
+                    <tr>
+                        <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-700">Chemical Engineering</td>
+                        <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-600">{{ thesis.Chemical_Engineering }}</td>
+                    </tr>
+                    <tr>
+                        <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-700">External</td>
+                        <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-600">{{ thesis.External }}</td>
+                    </tr>
+                    <tr>
+                        <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-700">Internal Sydney</td>
+                        <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-600">{{ thesis.Internal_Sydney }}</td>
+                    </tr>
+                    <tr>
+                        <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-700">Internal Casuarina</td>
+                        <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-600">{{ thesis.Internal_Casuarina }}</td>
+                    </tr>
+                </tbody>
+            </table>
+          
         </div>
 
 
