--- a/app_week6/templates/app_week6/view_theses.html
+++ b/app_week6/templates/app_week6/view_theses.html
@@ -12,15 +12,28 @@
             
             <h3 class="text-2xl {% if user in thesis.students.all %}text-green-600{% else %}text-gray-700{% endif %} font-bold">{{ thesis.title }}</h3>
             <p class="text-gray-600">{{ thesis.description|truncatechars:50 }}</p>
+          
             <div style="margin-top: 20px" class="flex flex-wrap items-center justify-center gap-x-10 gap-y-5 ">
             <a  href="{% url 'view_theses' thesis.id %}" class="text-blue-600 hover:text-blue-800  px-4 py-2 rounded-full bg-gray-200 w-max cursor-pointer">View Detail</a>
 
 
-            {% if user.user_type == 1 or user.user_type == 4 %}
+            {% if user.user_type == 4 %}
                 {% if not user in thesis.students.all %}
                 <a href="{% url 'request_to_join' thesis.id %}" class="text-blue-600 hover:text-blue-800  px-4 py-2 rounded-full bg-gray-200 w-max cursor-pointer">Request to join</a>
                 {% endif %}
+               
             {% endif %}
+
+            {% if user.user_type ==  3 %}
+
+            
+                {% if not user in thesis.students.all %}
+                 <a href="{% url 'edit_thesis' thesis.id %}" class="text-yellow-600 hover:text-yellow-800 px-4 py-2 rounded-full bg-gray-200 w-max cursor-pointer">Edit</a>
+                <a href="{% url 'delete_thesis' thesis.id %}" class="text-red-600 hover:text-red-800 px-4 py-2 rounded-full bg-gray-200 w-max cursor-pointer">Delete</a>
+                {% endif %}
+        
+            {% endif %}
+
             </div>
         </li>
         {% endfor %}
